--- a/website/frontend/src/app/app.component.html
+++ b/website/frontend/src/app/app.component.html
@@ -8,7 +8,7 @@
     <p>Search by Author</p>
     <input #authorname placeholder="Enter Author Name"/>
     <button (click)="searchAuthor(authorname.value)">Search</button>
-    <span>Server Respond: {{authorData | json}}</span>
+    <span>Server Respond: {{authorData}}</span>
 </div>
 
 <div>
